--- a/alarm-ionic/www/index.html
+++ b/alarm-ionic/www/index.html
@@ -18,6 +18,7 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/restangular/dist/restangular.js"></script>
 	  <script src="lib/lodash/dist/lodash.js"></script>
+	<script src="lib/angular-cookies/angular-cookies.js"></script>
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
